fix: align project in modo furbo

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -6,6 +6,15 @@
     box-sizing: border-box;
 }
 
+a {
+    text-decoration: none;
+    color: unset;
+}
+
+ul {
+    margin: 0px;
+}
+
 ::-webkit-scrollbar {
     width: 7px;
     height: 7px;
@@ -45,12 +54,68 @@
     border-radius: 4px;
 }
 
-:root{
+:root {
     --yellow-300: #FDFBF7;
     --yellow-400: #FAF3E3;
     --yellow-500: #FDE8A2;
     --orange-400: #F16529;
     --orange-hover: #F28354;
-    --purple-400:#55328C;
+    --purple-400: #55328C;
     --purple-hover: #61468C;
+}
+
+.spacer-xs {
+    margin-top: 8px;
+}
+
+.spacer-sm {
+    margin-top: 12px;
+}
+
+.spacer-md {
+    margin-top: 16px;
+}
+
+.spacer-lg {
+    margin-top: 24px;
+}
+
+.spacer-xl {
+    margin-top: 34px;
+}
+
+.spacer-xl {
+    margin-top: 56px;
+}
+
+.spacer-xxl {
+    margin-top: 96px;
+}
+
+.spacer-xxxl {
+    margin-top: 120px;
+}
+
+.flex {
+    display: flex;
+}
+
+.flex-column {
+    flex-direction: column;
+}
+
+.align-items-center {
+    align-items: center;
+}
+
+.justify-content-center {
+    justify-content: center;
+}
+
+.justify-content-between {
+    justify-content: space-between;
+}
+
+.flex-wrap {
+    flex-wrap: wrap;
 }
